--- a/application/base/view/default/default.html
+++ b/application/base/view/default/default.html
@@ -11,4 +11,5 @@
 <{if $result.name.0.age==3}><{$result.0.memo}><{else}>
 <{assign record="abc" data=array('a','b',$record)}>
 <{$data.2}>
-<{fi}>  
+<{fi}>
+<{include 'test.html'}>
