--- a/application/base/view/default/test.html
+++ b/application/base/view/default/test.html
@@ -1,4 +1,12 @@
 <div style="border:1px red solid;height:100px;width:100px;">
 <{lang "这是备注"}><br/>
+<{lang "欢迎mick回来"}><br/>
 <{url "member/login/active/user/mick"}>
+<{assign $record=array('a','b','c','d','e') }>
+<br/><{input_select name="abc" options=$record class="abc" vab="nishishei"}>
+<br/><{input_radio name="def" options=$record checked="1"}>
+<br/><{input_checkbox name="ghi" options=$record checked="2"}>
+<br/><{input_text name="jkl" value="danshine" class="nasdj;f" url="lwer3452" sldfj="3452345234"}>
+<{assign $value="aaaaaaaaaaaa bbbbbbbbbbbbbbb ccccccccccccc"}>
+<br/><{input_textarea name="mno" value=$value cols="100"}>
 </div>
