--- a/application/base/view/default/test.html
+++ b/application/base/view/default/test.html
@@ -9,4 +9,5 @@
 <br/><{input_text name="jkl" value="danshine" class="nasdj;f" url="lwer3452" sldfj="3452345234"}>
 <{assign $value="aaaaaaaaaaaa bbbbbbbbbbbbbbb ccccccccccccc"}>
 <br/><{input_textarea name="mno" value=$value cols="100"}>
+<{abcdefg "aaaaaaaaaaaaaaaaaaaaaa"}>
 </div>
