--- a/application/base/view/default/default.html
+++ b/application/base/view/default/default.html
@@ -5,11 +5,11 @@
 </tr> 
 <{done}>
 </table>
-<{lang $aaa.bbb.ccc.1.ddd}><br/>
-<a href="<{url 'base/member/index/id/1/name/mick'}>"><{url 'base/member/index/id/1/name/mick'}></a>
+<{lang data=$aaa.bbb.ccc.1.ddd}><br/>
+<a href="<{url data="base/member/index/id/1/name/mick"}>"><{url data="base/member/index/id/1/name/mick"}></a>
 <br/>
 <{if $result.name.0.age==3}><{$result.0.memo}><{else}>
 <{assign record="abc" data=array('a','b',$record)}>
 <{$data.2}>
 <{fi}>
-<{include 'test.html'}>
+<{include "test.html"}>
