--- a/application/base/view/default/login.html
+++ b/application/base/view/default/login.html
@@ -1,5 +1,5 @@
 <div><{$error}></div>
-<form action="<{url "base/default/dologin"}>" method="post">
+<form action="<{url data="base/default/dologin"}>" method="post">
 <{input_text name="username"}><br/>
 <{input_text name="password"}><br/>
 <input type="submit" value="submit"/>
