--- a/application/base/view/default/default.html
+++ b/application/base/view/default/default.html
@@ -1,3 +1,4 @@
+<{include "header.html"}>
 <table>  
 <{for from=$result item=$val}>
 <tr>
@@ -13,3 +14,5 @@
 <{$data.2}>
 <{fi}>
 <{include "test.html"}>
+<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+<{include "footer.html"}>
