--- a/application/base/view/default/header.html
+++ b/application/base/view/default/header.html
@@ -11,6 +11,8 @@
 <!-- 可选的Bootstrap主题文件（一般不用引入） -->
 <link rel="stylesheet" href="http://cdn.bootcss.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
 
+<link rel="stylesheet" href="/seephp/trunk/statics/css/animate.min.css">
+
 <!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
 <script src="http://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
 
@@ -18,7 +20,7 @@
 <script src="http://cdn.bootcss.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 
 <style type="text/css">
-#message { position:absolute;left:20%;top:-50px; }
+#message { position:absolute;left:45%;top:-50px; }
 </style>
 </head>
-<body>
+<body style="width:100%;height:100%;padding:0;border:1px solid black;margin:0 auto;background:url(/seephp/trunk/statics/images/20150126220255.png) no-repeat top">
