--- a/application/base/view/default/test.html
+++ b/application/base/view/default/test.html
@@ -1,7 +1,7 @@
 <div style="border:1px red solid;height:100px;width:100px;">
-<{lang data="这是备注"}><br/>
-<{lang data="欢迎回来"}><{$username}>a<br/>
-<a href="<{url data="base/default/logout"}>"><{url data="base/default/logout"}></a>
+<{lang "这是备注"}><br/>
+<{lang "欢迎回来"}><{$username}>a<br/>
+<a href="<{url "base/default/logout"}>"><{url "base/default/logout"}></a>
 <{assign $record=array('a','b','c','d','e') }>
 <br/><{input_select name="abc" options=$record class="abc" vab="nishishei"}>
 <br/><{input_radio name="def" options=$record checked="1"}>
@@ -9,6 +9,6 @@
 <br/><{input_text name="jkl" value="danshine" class="nasdj;f" url="lwer3452" sldfj="3452345234"}>
 <{assign $value="aaaaaaaaaaaa bbbbbbbbbbbbbbb ccccccccccccc"}>
 <br/><{input_textarea name="mno" value=$value cols="100"}>
-<{abcdefg data="aaaaaaaaaaaaaaaaaaaaaa"}>
-<{img data="logo.gif"}>
+<{abcdefg "aaaaaaaaaaaaaaaaaaaaaa"}>
+<{img src="logo.gif"}>
 </div>
