--- a/application/base/view/default/header.html
+++ b/application/base/view/default/header.html
@@ -23,4 +23,4 @@
 #message { position:absolute;left:45%;top:-50px; }
 </style>
 </head>
-<body style="width:100%;height:100%;padding:0;border:1px solid black;margin:0 auto;background:url(/seephp/trunk/statics/images/20150126220255.png) no-repeat top">
+<body style="width:350px;height:650px;padding:0;border:1px solid black;margin:0 auto;background:url(/seephp/trunk/statics/images/20150126220255.png) no-repeat top">
