--- a/application/base/view/default/header.html
+++ b/application/base/view/default/header.html
@@ -21,6 +21,27 @@
 
 <style type="text/css">
 #message { position:absolute;left:45%;top:-50px; }
+#nav { width:100%; height:35px; border-bottom:1px solid #d1d1d1; }
+#nav_left { float:left; width:50px; text-align:center; }
+#nav_center { float:left; width:248px; text-align:center; }
+#nav_right { float:left; width:50px; text-align:center; position:relative; }
+#nav_right_menu { display:none;position:absolute;right:0;top:35px;background:white; }
 </style>
 </head>
 <body style="width:350px;height:650px;padding:0;border:1px solid black;margin:0 auto;background:url(/seephp/trunk/statics/images/20150126220255.png) no-repeat top">
+
+<div id="nav">
+	<div id="nav_left"> < </div>
+	<div id="nav_center">list</div>
+	<div id="nav_right"> = 
+		<div id="nav_right_menu">
+			<ul>
+				<li>添加</li>
+				<li>bbbbbbbb</li>
+				<li>cccccccc</li>
+				<li>ddddddddd</li>
+				<li>eeeeeeee</li>
+			</ul>
+		</div>
+	</div>
+</div>
